welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:5: error: type mismatch;
 found   : Unit
 required: Boolean
    if (a<0 && b<0){
    ^